--- a/CoffeeShop/js-app/index.html
+++ b/CoffeeShop/js-app/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <title>Coffee Shop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="./main.css" rel="stylesheet">
 </head>
 <body>
     <button id="run-button">Run It!</button>
-    <script src="main.js"></script>
+    <div id="cofeeShop" class="mainContainer">
+
+
+	</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
