--- a/CoffeeShop/js-app/index.html
+++ b/CoffeeShop/js-app/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <button id="run-button">Run It!</button>
+    <section class="addBean">
+    </section>
     <div id="cofeeShop" class="mainContainer">
-
-
-	</div>
-
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script type="module" src="main.js"></script>
 </body>
